fixed extra space on the root

--- a/src/components/LogIn/SignIn.scss
+++ b/src/components/LogIn/SignIn.scss
@@ -1,16 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
+body {
+  position: fixed
+}
 
 #root{
   background-image: url('../../images/new2UCollage.png');
-  
+  position: fixed;
 }
 .forgot{
   margin-top: 60px;
   color: #07122E;
   font-family: "Montserrat";
   font-style: normal;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 30px;
   line-height: 37x;
   text-align: center;
